// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Styles/Width > handles % value 1`] = `
{
  "classNames": [
    "_literal_dd7142",
  ],
  "variables": {
    "--rs-w-s": "50%",
  },
}
`;

exports[`Styles/Width > handles px value 1`] = `
{
  "classNames": [
    "_literal_dd7142",
  ],
  "variables": {
    "--rs-w-s": "50px",
  },
}
`;

exports[`Styles/Width > handles responsive value 1`] = `
{
  "classNames": [
    "_literal_dd7142",
    "_literal--l_dd7142",
  ],
  "variables": {
    "--rs-w-l": "50%",
    "--rs-w-s": "50px",
  },
}
`;

exports[`Styles/Width > handles undefined value 1`] = `null`;

exports[`Styles/Width > handles unit value 1`] = `
{
  "classNames": [
    "_unit_dd7142",
  ],
  "variables": {
    "--rs-w-s": 5,
  },
}
`;
